// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article cards renders correctly Large 1`] = `
<div
  className="md:flex w-full h-full col-span-6"
>
  <div
    className="card"
  >
    <div
      className="flex flex-col md:flex-row"
    >
      <div
        className="relative rounded-t-lg md:rounded-l-lg md:w-1/2 lg:w-2/3"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <noscript>
            <img
              alt="alt"
              className="bg-black rounded-t-lg w-full h-52 md:rounded-l-lg md:rounded-tr-none md:h-80"
              decoding="async"
              src="https://blog.kochie.io/test.webp"
              srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
          <img
            alt="alt"
            className="bg-black rounded-t-lg w-full h-52 md:rounded-l-lg md:rounded-tr-none md:h-80"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="md:right-0 md:top-0 absolute p-4 bottom-0"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4 lg:w-1/3"
      >
        <h2
          className="heading text-2xl"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="mb-8 mt-2"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-4"
        >
          <sub>
            1
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`article cards renders correctly Medium 1`] = `
<div
  className="md:col-span-3 col-span-6 w-full h-full"
>
  <div
    className="card"
  >
    <div
      className="flex flex-col"
    >
      <div
        className="bg-black rounded-t-lg relative"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <noscript>
            <img
              alt="alt"
              className="bg-black rounded-t-lg"
              decoding="async"
              src="https://blog.kochie.io/test.webp"
              srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
          <img
            alt="alt"
            className="bg-black rounded-t-lg"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="absolute p-4 bottom-0"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4"
      >
        <h2
          className="heading text-2xl"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="mb-8 mt-2"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-4"
        >
          <sub>
            1
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`article cards renders correctly Small 1`] = `
<div
  className="md:col-span-3 lg:col-span-2 w-full h-full col-span-6"
>
  <div
    className="card"
  >
    <div
      className="flex flex-col"
    >
      <div
        className="relative bg-black rounded-t-lg"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <noscript>
            <img
              alt="alt"
              className="bg-black rounded-t-lg"
              decoding="async"
              src="https://blog.kochie.io/test.webp"
              srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
          <img
            alt="alt"
            className="bg-black rounded-t-lg"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="absolute p-4 bottom-0"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4"
      >
        <h2
          className="heading text-2xl"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="mb-8 mt-2"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-4"
        >
          <sub>
            1
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
